fix: message bar icon in high contrast, and restyle message bar button/link
* set icon to use `$always-black` rather than `$secondary-text`, so it doesn't end up white on light yellow in high contrast mode
* restyle button/link in message bar to always use underline and to inherit the regular text color of the message bar - avoids yellow button/link on light yellow in high contrast, but also improves visibility of the link in regular contrast mode

--- a/src/DetailsView/details-view-body.scss
+++ b/src/DetailsView/details-view-body.scss
@@ -54,7 +54,12 @@
 
         :global(.ms-MessageBar-icon) i {
             margin-left: 12px;
-            color: $secondary-text;
+            color: $always-black;
+        }
+
+        :global(.ms-MessageBar-text .insights-link) {
+            color: inherit !important;
+            text-decoration: underline;
         }
 
         .view {
